<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/switch_view"
        android:orderInCategory="100"
        android:showAsAction="withText"
        android:title="@string/switch_folder_archived"
        android:icon="@android:drawable/ic_menu_view"/>
    <item
        android:id="@+id/mail_all"
        android:orderInCategory="200"
        android:showAsAction="withText"
        android:title="@string/send_all_as_mail"
        android:icon="@android:drawable/ic_menu_send"/>
    <item
        android:id="@+id/summary"
        android:orderInCategory="300"
        android:showAsAction="withText"
        android:title="@string/switch_folder_summary"
        android:icon="@android:drawable/ic_menu_agenda"/>
</menu>