<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/folderName_text"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/summary_folder"
        android:background="@drawable/bg_pastel_gradient"
        android:textSize="24sp"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TableRow>
            <TextView
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="3dp"
                android:text="@string/todo_summary_all"/>
            <TextView
                android:id="@+id/summary_total_all"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:textSize="22sp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_marginLeft="0dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:text="@string/todo_summary"/>
            <TextView
                android:id="@+id/summary_total"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:textSize="22sp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_marginLeft="0dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:text="@string/todo_summary_checked"/>
            <TextView
                android:id="@+id/summary_total_checked"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:textSize="22sp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_marginLeft="0dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:text="@string/todo_summary_unchecked"/>
            <TextView
                android:id="@+id/summary_total_unchecked"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:textSize="22sp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_marginLeft="0dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:text="@string/todo_summary_archived"/>
            <TextView
                android:id="@+id/summary_total_archived"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:textSize="22sp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_marginLeft="0dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:text="@string/todo_summary_archived_checked"/>
            <TextView
                android:id="@+id/summary_total_archived_checked"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:textSize="22sp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_marginLeft="0dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="21dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:text="@string/todo_summary_archived_unchecked"/>
            <TextView
                android:id="@+id/summary_total_archived_unchecked"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:textSize="22sp"
                android:layout_margin="5dp"
                android:gravity="center"
                android:layout_marginLeft="0dp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>